Update local variables to be used consistently